[project]
name = "task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.9.1",
    "asyncio-throttle==1.0.2",
    "eth-account==0.10.0",
    "prometheus-client==0.19.0",
    "web3==6.11.3",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pylint>=4.0.3",
]
